cmake_minimum_required(VERSION 3.23)
project(my_onlinejudge_coding_diary)

set(CMAKE_CXX_STANDARD 14)

add_executable(my_onlinejudge_coding_diary
        "code/2022.12/2022.12.01/LG B2014.cpp"
        "code/2022.12/2022.12.01/LG P1428.cpp"
        "code/Before 2022.12.01/CF734B.cpp"
        "code/Before 2022.12.01/LG B2003.cpp"
        "code/Before 2022.12.01/LG B2005.cpp"
        "code/Before 2022.12.01/LG B2007.cpp"
        "code/Before 2022.12.01/LG B2008.cpp"
        "code/Before 2022.12.01/LG B2009.cpp"
        "code/Before 2022.12.01/LG B2010.cpp"
        "code/Before 2022.12.01/LG B2012.cpp"
        "code/Before 2022.12.01/LG B2013.cpp"
        "code/Before 2022.12.01/LG B2017.cpp"
        "code/Before 2022.12.01/LG B2025.cpp"
        "code/Before 2022.12.01/LG B2029.cpp"
        "code/Before 2022.12.01/LG P1421.cpp"
        "code/Before 2022.12.01/LG P1425.cpp"
        "code/Before 2022.12.01/LG P3954.cpp"
        "code/Before 2022.12.01/LG P5703.cpp"
        "code/Before 2022.12.01/LG P5706.cpp"
        "code/Before 2022.12.01/LG P5707.cpp"
        "code/Before 2022.12.01/LG P5709.cpp"
        "code/Before 2022.12.01/LG P5711.cpp"
        "code/Before 2022.12.01/LG P5713.cpp"
        "code/Before 2022.12.01/LG P5714.cpp"
        "code/Before 2022.12.01/LG P5715.cpp"
        "code/Before 2022.12.01/LG P5717.cpp")
